# Innotter-statistics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: consumer.py  main.py  schemas.py  service.py  utils.py
src/dynamodb/: db.py  generate_table.py  repository.py
