[tool.poetry]
name = "innotter-statistics"
version = "0.1.0"
description = ""
authors = ["mmishv <pinina7773@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
boto3 = "^1.28.36"
python-dotenv = "^1.0.0"
pika = "^1.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pre_commit]
hooks = [
  "trailing-whitespace",
  "end-of-file-fixer",
  "check-yaml",
  "debug-statements",
  "black",
  "isort",
]

[tool.pre_commit.hook-trailing-whitespace]
files = ["*.py"]

[tool.pre_commit.hook-end-of-file-fixer]
files = ["*.py"]

[tool.pre_commit.hook-check-yaml]
files = ["*.yml", "*.yaml"]

[tool.pre_commit.hook-debug-statements]
files = ["*.py"]

[tool.pre_commit.hook-double-quote-string-fixer]
files = ["*.py"]

[tool.pre_commit.hook-black]
files = ["*.py"]

[tool.pre_commit.hook-isort]
args = ["--profile", "black"]
files = ["*.py"]

[tool.pytest.ini_options]
pythonpath = "src"
